# fileshare

./: .gitignore  Cargo.toml
src/: cli.rs  client.rs  lib.rs  main.rs  server.rs  thread_pool.rs  tserv.rs
